# dagster-uv-docker-aws

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  repository_content.txt  save_repo_content.py
.tmp_dagster_home_7wj35tht/history/: runs.db
.tmp_dagster_home_7wj35tht/history/runs/: 3382c99f-0e02-4b9e-9daa-74d75266cc90.db  5915680c-61cd-4064-9522-6786f12f5148.db  b14912a1-4b6f-4dfd-bb3c-31768a43b52b.db  index.db
.tmp_dagster_home_7wj35tht/schedules/: schedules.db
.tmp_dagster_home_7wj35tht/storage/: extract_pdf_text  extract_structured_info  load_to_database
.tmp_dagster_home_dfvpexul/history/: runs.db
.tmp_dagster_home_dfvpexul/schedules/: schedules.db
.tmp_dagster_home_j341qvjm/history/: runs.db
.tmp_dagster_home_j341qvjm/schedules/: schedules.db
.tmp_dagster_home_j341qvjm/storage/: extract_pdf_text  load_to_database
.tmp_dagster_home_vnjhbnk0/history/: runs.db
.tmp_dagster_home_vnjhbnk0/schedules/: schedules.db
.tmp_dagster_home_yzecar2v/history/: runs.db
.tmp_dagster_home_yzecar2v/schedules/: schedules.db
data/: documents.duckdb.wal
data/s1_extract_pdf_text/: 1706.03762v7.json  Report-ESG-2022_IT.json  hon-esg-report.json
data/s2_structured_info/: 1706.03762v7_structured.json
src/: definitions.py
src/assets/: s1_extract_pdf_text.py  s2_structured_info.py  s3_db_load.py
src/config/: s2_structured_info.yaml
src/resources/: duckdb.py  openai.py  postgres.py  storage.py
src/services/: structured_output_processor.py
src/types/: documents.py
src/utils/: config_loader.py
(+24 files in other folders)
