[project]
name = "dagster-uv-docker-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.24",
    "dagster>=1.10.7",
    "dagster-aws>=0.26.7",
    "dagster-duckdb>=0.26.7",
    "dagster-openai>=0.26.7",
    "dagster-webserver>=1.10.7",
    "duckdb>=1.2.1",
    "logfire>=3.12.0",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.1",
    "unstructured[pdf]>=0.17.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "src.definitions"
code_location_name = "src"
